# VulkanExplorations

./: .gitignore  .gitmodules  CMakeLists.txt  HelloTriangle.sln  HelloVulkan.cpp  README.md  Settings.cap  stdafx.h
HelloTriangle/: HelloTriangle.vcxproj  HelloTriangle.vcxproj.filters  HelloVulkan.cpp  stdafx.cpp  stdafx.h
HelloTriangle/shaders/: shader.vert
res/: breadtangle.dds
shaders/: shader.vert
